--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,14 +20,14 @@
             <div class="d-flex bg-light">
                 <h1 class="text-danger"> HGA </h1>
                 <button class="btn btn-end ms-auto"><h3 class="text-primary text-end"> crear cuenta </h3></button>
-                <button class="btn btn-end"><h3 class="text-success text-end"> iniciar sesion </h3></button>
+		<a href="login.html"><button class="btn btn-end"><h3 class="text-success text-end"> iniciar sesion </h3></button></a>
             </div>
         </nav>
     </header>  
     <main>
         <h2 class="text-dark text-center"> un hogar feliz un hogar para todos  </h2>
         <p class="text-success" class="text-center"> 
-            Lorem ipsum dolor sit amet consecte tur adipisicing elit. Ducimus 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus 
             ipsum quisquam tenetur itaque, animi veritatis? Voluptas mollitia 
             optio quam praesentium fugiat labore debitis, error recusandae 
             excepturi, perferendis vitae hic aliquid?
