fix: se estructuro el contenido de los archivos login.html y el register.html / feature: se creo el archivo main_page(user).html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,15 +12,17 @@
             background-position: start end;
         }
     </style>
-    <title>prueba</title>
+    <title>HGA</title>
 </head>
 <body>
     <header> 
-        <nav">
-            <div class="d-flex bg-light">
-                <h1 class="text-danger"> HGA </h1>
-                <button class="btn btn-end ms-auto"><h3 class="text-primary text-end"> crear cuenta </h3></button>
-		<a href="login.html"><button class="btn btn-end"><h3 class="text-success text-end"> iniciar sesion </h3></button></a>
+        <nav>
+            <div class="d-flex bg-light align-items-center">
+                <a href="index.html"><button class="btn btn-end">
+                    <h1 class="text-danger"> HGA </h1>
+                </button></a>
+                <a href="register.html" class="ms-auto"><button class="btn btn-end"><h3 class="text-primary text-end"> crear cuenta </h3></button></a>
+                <a href="login.html"><button class="btn btn-end"><h3 class="text-success text-end"> iniciar sesion </h3></button></a>
             </div>
         </nav>
     </header>  
