fix: correcciones menores al login.html

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -37,7 +37,7 @@
 
                         <!-- Botón Crear Cuenta (morado) -->
                         <div class="d-grid col-6 mx-auto mb-3">
-                            <a href="main_page(user).html" class="btn text-white" style="background-color:#343eaf;">Crear Cuenta</a>
+                            <a href="main_page(user).html" class="btn text-white" style="background-color:#343eaf;">Crear cuenta</a>
                         </div>
 
                         <!-- Botón Regresar (rojo) -->
