fix: arreglos menores a la estructura del login.html/feature: creacion de las carpetas para el backend

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -30,19 +30,19 @@
                             <label for="usuario" class="form-label">Usuario</label>
                             <input type="text" class="form-control" id="usuario">
                         </div>
-                        <div class="mb-4">
+                        <div class="mb-5">
                             <label for="password" class="form-label">Contraseña</label>
                             <input type="password" class="form-control" id="password">
                         </div>
 
-                        <!-- Botón Crear Cuenta (morado) -->
-                        <div class="d-grid col-6 mx-auto mb-3">
-                            <a href="main_page(user).html" class="btn text-white" style="background-color:#343eaf;">Crear cuenta</a>
+                        <!-- Botón Crear Cuenta -->
+                        <div class="d-flex col-3 mx-auto mb-4">
+                            <a href="main_page(user).html"><button type="button" class="btn btn-primary"><h5 class="text-white">Crear cuenta</h5></button></a>
                         </div>
 
-                        <!-- Botón Regresar (rojo) -->
-                        <div class="d-grid col-6 mx-auto">
-                            <a href="index.html" class="btn btn-danger">Regresar</a>
+                        <!-- Botón Regresar -->
+                        <div class="d-flex col-2 mx-auto">
+                            <a href="index.html"><button type="button" class="btn btn-danger"><h5 class="text-white">Regresar</h5></button></a>
                         </div>
                     </form>
                 </div>
@@ -50,3 +50,7 @@
         </div>
     </main>
 </body>
+
+<footer class="bg-light text-center p-3 position-fixed bottom-0 w-100">
+    <h3> derechos reservados HGA &copy; 2025 </h3>
+</footer>
