feat: add new files

--- a/frontend/login_employees.html
+++ b/frontend/login_employees.html
@@ -14,7 +14,7 @@
 <body class="bg-light">
     <!-- Encabezado simple con logo -->
     <header class="container">
-		<a href="index.html"><button class="btn btn-end">
+		<a href="main_page_employees.html"><button class="btn btn-end">
 			<h1 class="text-danger"> HGA </h1>
 		</button></a>
     </header>
@@ -47,18 +47,19 @@
 
                         <!-- Botón Regresar -->
                         <div class="d-flex col-2 mx-auto">
-                            <a href="index.html"><button type="button" class="btn btn-danger"><h5 class="text-white">Regresar</h5></button></a>
+                            <a href="main_page_employees.html"><button type="button" class="btn btn-danger"><h5 class="text-white">Regresar</h5></button></a>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </main>
-</body>
 
-   <!-- Footer -->
-   <footer class="mt-auto py-3 footer">
-    <div class="container text-center">
-      <small class="text-muted">derechos reservados HGA &copy; 2025</small>
-    </div>
-  </footer>
+    <!-- Footer -->
+    <footer class="mt-auto py-3 footer">
+      <div class="container text-center">
+        <small class="text-muted">derechos reservados HGA &copy; 2025</small>
+      </div>
+    </footer>
+    </body>
+</html>
