--- a/frontend/Informes.html
+++ b/frontend/Informes.html
@@ -56,7 +56,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-4">
         <a href="Notificaciones.html" class="nav-link"><button class="btn btn-end">Notificaciones</button> </a>
-        <a href="#" class="nav-link"><button class="btn btn-end">Reuniones</button></a>
+        <a href="reuniones.html" class="nav-link"><button class="btn btn-end">Reuniones</button></a>
         <a href="#" class="nav-link"><button class="btn btn-end">Visitas</button></a>
       </ul>
     </div>
